Refactoring completed